Fix padding problem on contact company button on mobile

--- a/enrolment/static/sass/company-profile-details.scss
+++ b/enrolment/static/sass/company-profile-details.scss
@@ -482,6 +482,15 @@
   }
 }
 
+.ed-contact-company-contianer {
+  @media (min-width: 640px) {
+    text-align: right;
+  }
+  @media (max-width: 640px) {
+    margin-top: 25px;
+  }
+}
+
 /* Mobile */
 @media (max-width: 640px) {
   .company-logo .logo-container {
